thrasyboulos/ge/base/perikles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perikles
  namespace: odysseia
  labels:
    env: k3d
    variant: k3d
    app: perikles
    domain: "backend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perikles
  template:
    metadata:
      labels:
        app: perikles
        release: perikles
        version: v0.1.5
    spec:
      serviceAccountName: periklessa
      containers:
        - name: perikles
          image: ghcr.io/odysseia-greek/perikles:v0.1.5

          imagePullPolicy: Always
          ports:
            - containerPort: 4443
              name: webhook-tcp
          volumeMounts:
            - name: webhook-certs
              mountPath: /app/config
              readOnly: true

            - name: elastic-internal-tls
              mountPath: /app/config/elastic
              readOnly: true
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /perikles/v1/ping
              port: 4443
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /perikles/v1/ping
              port: 4443
            initialDelaySeconds: 1
            periodSeconds: 20
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
      volumes:
        - name: webhook-certs
          secret:
            secretName: perikles-certs
        - name: elastic-internal-tls
          secret:
            secretName: aristoteles-es-http-certs-public
