thrasyboulos/ge/base/perikles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perikles
  namespace: odysseia
spec:
  selector:
    app: perikles
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    protocol: TCP
    targetPort: 8080
