thrasyboulos/ge/base/perikles/np-to-elastic.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-elasticsearch-access-perikles
spec:
  endpointSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: aristoteles
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: perikles
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
